--- a/style.css
+++ b/style.css
@@ -535,7 +535,7 @@ footer {
 
 .superior-container a,
 .superior-container button,
-.superior-container p {
+.superior-container span {
   font-weight: 700;
   font-size: 1.5rem;
   color: #f5f5f5;
@@ -553,11 +553,13 @@ footer {
   padding: 0.5rem 0 0.5rem 0;
   width: 1074px;
   display: flex;
+  justify-content: center;
 }
 
 .compartir-juego {
   padding: 0.5rem 0 0.5rem 0;
   width: 369px;
+  justify-content: center;
 }
 
 /* 
@@ -692,4 +694,43 @@ footer {
   background-color: rgba(33, 34, 51, 0.4);
   padding: 0.5rem;
   border-radius: 1rem;
+}
+
+/**/
+
+.galeria-detalles {
+  margin: 1rem;
+  width: 35%;
+  height: 75vh;
+  display: flex;
+  padding: 1rem 2rem 0 2rem;
+}
+
+.galeria-detalles,
+.video-detalles {
+  background-color: rgba(33, 34, 51, 0.2);
+  border-radius: 2rem;
+}
+
+.video-detalles {
+  margin: 1rem;
+  width: 65%;
+  height: 75vh;
+}
+
+.galeria-detalles {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.galeria-detalles img {
+  width: auto;
+  max-width: 100%;
+  margin: 1rem 0;
+  border-radius: 1rem;
+}
+
+.detalles-container {
+  display: flex;
 }
