--- a/style.css
+++ b/style.css
@@ -140,11 +140,13 @@ nav h1 {
 #profile-picture {
   border-radius: 2rem;
   border: #f5f5f5 solid;
+  cursor: pointer;
 }
 
 #cart-img,
 #burger-menu {
   filter: invert();
+  cursor: pointer;
 }
 
 .nav-left {
@@ -216,21 +218,31 @@ nav h1 {
 
 #boton-registro {
   background-color: #e5e5e5;
-  transition: background-color 0.5s ease-in-out;
 }
 
 #boton-registro:hover {
   background-color: #878a9e;
+  transition: background-color 0.5s ease-in-out;
+}
+
+#boton-registro:active {
+  background-color: #c0c0c0;
+  transition: none;
 }
 
 #boton-inicio-sesion {
   background-color: #0057ff;
   color: #f5f5f5;
-  transition: background-color 0.5s ease-in-out;
 }
 
 #boton-inicio-sesion:hover {
   background-color: #001f57;
+  transition: background-color 0.5s ease-in-out;
+}
+
+#boton-inicio-sesion:active {
+  background-color: #80a9ff;
+  transition: none;
 }
 
 hr {
@@ -321,11 +333,9 @@ hr {
 .deporte-carrusel,
 .horror-carrusel,
 .destacado-carrusel {
-  overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
   white-space: nowrap; /* Evita que los elementos se desplacen a una nueva línea */
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 .parati-container div img,
@@ -386,7 +396,6 @@ hr {
   flex-direction: column;
   justify-content: space-between; /* Espaciado uniforme entre los elementos */
   border-radius: 25px;
-
   align-items: flex-end; /* Alineación a la derecha */
   color: white; /* Color del texto y del botón */
   background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
@@ -429,8 +438,18 @@ hr {
   background-color: #001f57;
 }
 
+.pagar:active {
+  background-color: #80a9ff;
+  transition: none;
+}
+
 .jugar:hover {
   background-color: #907600;
+}
+
+.jugar:active {
+  background-color: #ffd700;
+  transition: none;
 }
 
 .overlay h4 {
@@ -442,7 +461,7 @@ hr {
 
 .overlay h4:nth-child(2) {
   position: absolute;
-  bottom: 10px; /* Ajusta la distancia desde la parte inferior */
+  bottom: 8px; /* Ajusta la distancia desde la parte inferior */
   left: 10px; /* Ajusta la distancia desde la parte izquierda */
   margin: 0; /* Elimina los márgenes para evitar espacios adicionales */
   margin-left: 1rem;
@@ -461,9 +480,9 @@ hr {
 }
 
 /* 
-|-----------------/----------/------\
-| Computer-Screen \ Footer \ Styles  >
-|-----------------/----------/------/
+|-----------------/----------/--------\
+| Computer-Screen \ Footer   \ Styles  >
+|-----------------/----------/--------/
 */
 
 .footer {
@@ -545,7 +564,7 @@ footer {
 .compartir-juego {
   display: flex;
   background-color: rgba(33, 34, 51, 0.2);
-  margin: 0 1rem 0 1rem;
+  margin: .5rem 1rem 0 1rem;
   border-radius: 3rem;
 }
 
@@ -563,9 +582,9 @@ footer {
 }
 
 /* 
-|-----------------/----------/------\
-| Computer-Screen \ Footer \ Styles  >
-|-----------------/----------/------/
+|-----------------/-----------/--------\
+| Computer-Screen \  IN-GAME  \ Styles  >
+|-----------------/-----------/--------/
 */
 
 .pjuego-container {
@@ -701,36 +720,234 @@ footer {
 .galeria-detalles {
   margin: 1rem;
   width: 35%;
-  height: 75vh;
+  height: 32rem;
   display: flex;
-  padding: 1rem 2rem 0 2rem;
-}
-
-.galeria-detalles,
-.video-detalles {
+  overflow: hidden;
   background-color: rgba(33, 34, 51, 0.2);
   border-radius: 2rem;
+  padding: 1rem;
 }
 
 .video-detalles {
   margin: 1rem;
   width: 65%;
-  height: 75vh;
+  height: 32rem;
+  display: flex;
+  position: relative; /* Agregar posición relativa al contenedor padre */
+  background-color: rgba(33, 34, 51, 0.2);
+  border-radius: 2rem;
+  padding: 1rem;
 }
 
-.galeria-detalles {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+.galeria-detalles div {
+  height: 100%;
+  width: 100%;
 }
 
 .galeria-detalles img {
-  width: auto;
-  max-width: 100%;
-  margin: 1rem 0;
+  width: 100%;
+  height: 100%;
   border-radius: 1rem;
+  object-fit: cover;
+  box-shadow: #212233 0.2px 0.2px 10px 1px;
+}
+
+.video-detalles img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  object-fit: cover;
+  box-shadow: #212233 0.2px 0.2px 10px 1px;
 }
 
 .detalles-container {
   display: flex;
+}
+
+.boton-play-video {
+  position: absolute;
+  top: 50%; /* Centrar verticalmente */
+  left: 50%; /* Centrar horizontalmente */
+  transform: translate(-50%, -50%); /* Alinear al centro */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.boton-play-video img {
+  width: 5rem;
+  height: 5rem;
+  box-shadow: none;
+}
+
+.boton-play-video p {
+  font-weight: 800;
+  font-size: 1.2rem;
+  color: #0e0e0e;
+}
+
+.info-adicional-container {
+  display: flex;
+  margin: 1rem;
+}
+
+.link-detalles-container ul li a,
+.texto-detalles-container p {
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.link-detalles-container ul li a {
+  color: #ffe866;
+  font-size: 1.7rem;
+  font-weight: 400;
+  transition: all 0.2s ease-in-out;
+}
+
+.link-detalles-container ul li a:hover {
+  color: #c1a000;
+  font-size: 1.71rem;
+}
+
+.img-detalles-container img {
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
+  border-radius: 1rem;
+  box-shadow: #212233 0.2px 0.2px 10px 1px;
+}
+
+
+/*
+-----------------------------------------------------------------------------------------|
+-----------------------------------------------------------------------------------------|
+-----------------------------------------CARRITO-----------------------------------------|
+-----------------------------------------------------------------------------------------|
+-----------------------------------------------------------------------------------------|
+*/
+
+
+.carrito-container {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(33, 34, 51, 0.2);
+  text-align: center;
+  width: 50%;
+  margin: auto;
+  margin-top: 1.5rem;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.carrito-container h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.carrito-container span {
+  color: #ffe866;
+  font-weight: 800;
+  font-size: 1.3rem;
+}
+
+.juegos-carrito-container {
+  background-color: rgba(33, 34, 51, 0.2);
+  width: 80%;
+  margin: auto;
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.juegos-carrito-container h4 {
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+.juegos-carrito-container ul {
+  margin: 2rem 0;
+}
+
+.juegos-carrito-container li {
+  display: flex;
+  margin: 1rem;
+  justify-content: space-between;
+}
+
+.juegos-carrito-container ul li div {
+  display: flex;
+}
+
+.juegos-carrito-container ul li {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.juegos-carrito-container ul li div p {
+  margin: 0 1rem;
+}
+
+.juegos-en-carrito ul li button img,
+.juegos-en-carrito ul li button {
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+}
+
+.juegos-en-carrito img {
+  filter: invert();
+}
+
+.total-carrito-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 1rem;
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+
+.boton-carrito {
+  display: flex;
+  justify-content: right;
+  margin: 1rem 0 0 0;
+}
+
+.boton-carrito button {
+  color: #e5e5e5;
+  padding: .5rem 2rem; 
+  border-radius: 4rem;
+  font-weight: 700;
+}
+
+.total-resaltado {
+  display: flex;
+  justify-content: right;
+  width: 80%;
+  margin: auto;
+  margin-top: 1rem;
+  padding-right: 1rem;
+}
+
+.total-resaltado p {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.total-resaltado span {
+  font-size: 1.5rem;
+}
+
+@media (max-width: 1100px) {
+  .tarjetas-heroes {
+    display: none;
+  }
+}
+
+
+@media (max-width: 510px) {
+  h1 {
+    display: none;
+  }
 }
